tests/parser/statement_if_err.expected
Syntax Error: line 4:
Unexpected token (TOK_ID, 'sample'), likely missing a(n)  
  'TOK_KEY_THEN' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
