tests/parser/statement_if_err.mtp
begin
	(*if statement with no then*)
	if 10
		sample := 0
	else
		sample := 1;
end
.